# calculus-toolbox-2

./: .gitignore  LICENSE  README.md  build.sh  calculus-toolbox.cabal  stack.yaml
app/: Main.hs
gui/: package-lock.json  package.json
gui/public/: electron.js  icon.icns  index.html  manifest.json
gui/src/: AddAssm.css  AddAssm.js  App.css  App.js  CalcDescription.css  CalcDescription.js  DocName.css  DocName.js  Editor.js  KaTeXRenderer.js  MainView.js  MathJaxRenderer.js  ParseTermModal.css  ParseTermModal.js  ParserBar.css  ParserBar.js  Preferences.js  ProofTree.css  ProofTree.js  ServantApi.js  SwitchCalc.js  electron-starter.js  index.css  index.js  menu-template.js  url-path.js  utils.js
gui/src/syntaxHighlighting/: defns.js  rules.js
src/: DepTerms.hs  GUI.hs  Rules.hs  RulesInv.hs  SequentCalc.hs  TH.hs  Terms.hs
src/CTTerms/: Core.hs  Parser.hs  Typing.hs
src/CTTerms/Parser/: CTTermParser.hs  Core.hs  DescParser.hs
src/CTTerms/Typing/: DescParser.hs
src/Lib/: Prelude.hs
src/Rules/: CutElimConditions.hs
src/Servant/JS/: Custom.hs
src/Terms/: JSON.hs  Parsers.hs  TH.hs
test/: Parser.hs
